tests/baselines/reference/nodeModulesTripleSlashReferenceModeDeclarationEmit7(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
/sub1/uses.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.
/sub1/uses.ts(2,16): error TS2304: Cannot find name 'getInterI'.
/sub2/uses.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.
/sub2/uses.ts(2,16): error TS2304: Cannot find name 'getInterR'.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== /index.ts (0 errors) ====
    // only an esm file can `import` both kinds of files
    import obj1 from "./sub1/uses.js"
    import obj2 from "./sub2/uses.js"
    export default [obj1, obj2.default] as const;
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        interface ImportInterface { _i: any; }
        function getInterI(): ImportInterface;
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        interface RequireInterface { _r: any; }
        function getInterR(): RequireInterface;
    }
==== /sub1/uses.ts (2 errors) ====
    /// <reference types="pkg" preserve="true" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    export default getInterI();
                   ~~~~~~~~~
!!! error TS2304: Cannot find name 'getInterI'.
==== /sub1/package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }
==== /sub2/uses.ts (2 errors) ====
    /// <reference types="pkg" preserve="true" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    export default getInterR();
                   ~~~~~~~~~
!!! error TS2304: Cannot find name 'getInterR'.
==== /sub2/package.json (0 errors) ====
    {
        "private": true,
        "type": "commonjs"
    }
==== /package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }